--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,14 @@
 			</ul>
 		</nav>
 	</header>
-	<main>
+	<main class="d-flex">
+		<aside>
+			<ul><li><a href="">test</a></li>
+<li><a href="">test</a></li>
+<li><a href="">test</a></li>
+			</ul>
+		</aside>
+		<div id="rechts">
 		<img src="assets/img/backgroundheader.png" alt="minimo background">
 		<h1 class="upper">photodiary</h1>
 		<section id="photodiaries">
@@ -76,6 +83,7 @@
 				</article>
 			</div>
 		</section>
+		</div>
 	</main>
 	<footer>
 		
