--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
 				</article>
 				
-				<div id="nieuwsbrief" role="nieuwsbrief" class="d-flex justify-content-center align-items-center flex-nowrap">
+				<div id="nieuwsbrief" role="nieuwsbrief" class="d-flex justify-content-center align-items-center flex-nowrap breakout-calc">
 						
 						<input type="email" placeholder="Enter a valid e-mail address" required>
 							<button type="submit"><img src="assets/img/mailicon.png" alt=""></i></button>
@@ -78,10 +78,20 @@
 					<h3 class="capital">winter days</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
 				</article>
+				<button id="load" class="btn ">
+					Load more
+				</button>
 			</div>
 		</section>
 	</main>
-	<footer>
+	<footer class="d-flex align-items-center">
+		<p class="flex-grow-1">Terms and conditions&nbsp;&nbsp;&nbsp;<a href="#">Privacy</a></p>
+		<div id="social" class="d-flex align-items-center justify-content-end">
+			<p>Follow</p>
+			<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+		</div>
 		
 	</footer>
 	
